parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR

Grammar

Rule 0     S' -> program
Rule 1     program -> declist MAIN LRB RRB block
Rule 2     program -> MAIN LRB RRB block
Rule 3     declist -> dec
Rule 4     declist -> declist dec
Rule 5     dec -> vardec
Rule 6     dec -> funcdec
Rule 7     type -> INTEGER
Rule 8     type -> FLOAT
Rule 9     type -> BOOLEAN
Rule 10    iddec -> ID
Rule 11    iddec -> ID LSB exp RSB
Rule 12    iddec -> ID ASSIGN exp
Rule 13    idlist -> iddec
Rule 14    idlist -> idlist COMMA iddec
Rule 15    vardec -> type idlist SEMICOLON
Rule 16    funcdec -> type ID LRB paramdecs RRB block
Rule 17    funcdec -> type ID LRB RRB block
Rule 18    funcdec -> VOID ID LRB paramdecs RRB block
Rule 19    funcdec -> VOID ID LRB RRB block
Rule 20    paramdecs -> paramdecslist
Rule 21    paramdecslist -> paramdec
Rule 22    paramdecslist -> paramdecslist COMMA paramdec
Rule 23    paramdec -> type ID
Rule 24    paramdec -> type ID LSB RSB
Rule 25    varlist -> vardec
Rule 26    varlist -> varlist vardec
Rule 27    block -> LCB varlist stmtlist RCB
Rule 28    block -> LCB varlist RCB
Rule 29    block -> LCB stmtlist RCB
Rule 30    block -> LCB RCB
Rule 31    stmtlist -> stmt
Rule 32    stmtlist -> stmtlist stmt
Rule 33    lvalue -> ID
Rule 34    lvalue -> ID LSB exp RSB
Rule 35    stmt -> RETURN exp SEMICOLON
Rule 36    stmt -> exp SEMICOLON
Rule 37    stmt -> block
Rule 38    stmt -> WHILE LRB exp RRB stmt
Rule 39    stmt -> FOR LRB exp SEMICOLON exp SEMICOLON exp RRB stmt
Rule 40    stmt -> IF LRB exp RRB stmt elseiflist
Rule 41    stmt -> IF LRB exp RRB stmt
Rule 42    stmt -> IF LRB exp RRB stmt elseiflist ELSE stmt
Rule 43    stmt -> IF LRB exp RRB stmt ELSE stmt
Rule 44    stmt -> PRINT LRB ID RRB SEMICOLON
Rule 45    elseiflist -> ELIF LRB exp RRB stmt
Rule 46    elseiflist -> elseiflist ELIF LRB exp RRB stmt
Rule 47    exp -> lvalue ASSIGN exp
Rule 48    exp -> exp SUM exp
Rule 49    exp -> exp SUB exp
Rule 50    exp -> exp MUL exp
Rule 51    exp -> exp DIV exp
Rule 52    exp -> exp MOD exp
Rule 53    exp -> exp OR exp
Rule 54    exp -> exp AND exp
Rule 55    exp -> const
Rule 56    exp -> lvalue
Rule 57    exp -> ID LRB explist RRB
Rule 58    exp -> LRB exp RRB
Rule 59    exp -> ID LRB RRB
Rule 60    exp -> SUB exp
Rule 61    exp -> NOT exp
Rule 62    const -> INTEGERNUMBER
Rule 63    const -> FLOATNUMBER
Rule 64    const -> TRUE
Rule 65    const -> FALSE
Rule 66    exp -> exp GT exp
Rule 67    exp -> exp LT exp
Rule 68    exp -> exp NE exp
Rule 69    exp -> exp EQ exp
Rule 70    exp -> exp LE exp
Rule 71    exp -> exp GE exp
Rule 72    explist -> exp
Rule 73    explist -> explist COMMA exp

Terminals, with rules where they appear

AND                  : 54
ASSIGN               : 12 47
BOOLEAN              : 9
COMMA                : 14 22 73
DIV                  : 51
ELIF                 : 45 46
ELSE                 : 42 43
EQ                   : 69
ERROR                : 
FALSE                : 65
FLOAT                : 8
FLOATNUMBER          : 63
FOR                  : 39
GE                   : 71
GT                   : 66
ID                   : 10 11 12 16 17 18 19 23 24 33 34 44 57 59
IF                   : 40 41 42 43
INTEGER              : 7
INTEGERNUMBER        : 62
LCB                  : 27 28 29 30
LE                   : 70
LRB                  : 1 2 16 17 18 19 38 39 40 41 42 43 44 45 46 57 58 59
LSB                  : 11 24 34
LT                   : 67
MAIN                 : 1 2
MOD                  : 52
MUL                  : 50
NE                   : 68
NOT                  : 61
OR                   : 53
PRINT                : 44
RCB                  : 27 28 29 30
RETURN               : 35
RRB                  : 1 2 16 17 18 19 38 39 40 41 42 43 44 45 46 57 58 59
RSB                  : 11 24 34
SEMICOLON            : 15 35 36 39 39 44
SUB                  : 49 60
SUM                  : 48
TRUE                 : 64
VOID                 : 18 19
WHILE                : 38
error                : 

Nonterminals, with rules where they appear

block                : 1 2 16 17 18 19 37
const                : 55
dec                  : 3 4
declist              : 1 4
elseiflist           : 40 42 46
exp                  : 11 12 34 35 36 38 39 39 39 40 41 42 43 45 46 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 58 60 61 66 66 67 67 68 68 69 69 70 70 71 71 72 73
explist              : 57 73
funcdec              : 6
iddec                : 13 14
idlist               : 14 15
lvalue               : 47 56
paramdec             : 21 22
paramdecs            : 16 18
paramdecslist        : 20 22
program              : 0
stmt                 : 31 32 38 39 40 41 42 42 43 43 45 46
stmtlist             : 27 29 32
type                 : 15 16 17 23 24
vardec               : 5 25 26
varlist              : 26 27 28

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declist MAIN LRB RRB block
    (2) program -> . MAIN LRB RRB block
    (3) declist -> . dec
    (4) declist -> . declist dec
    (5) dec -> . vardec
    (6) dec -> . funcdec
    (15) vardec -> . type idlist SEMICOLON
    (16) funcdec -> . type ID LRB paramdecs RRB block
    (17) funcdec -> . type ID LRB RRB block
    (18) funcdec -> . VOID ID LRB paramdecs RRB block
    (19) funcdec -> . VOID ID LRB RRB block
    (7) type -> . INTEGER
    (8) type -> . FLOAT
    (9) type -> . BOOLEAN

    MAIN            shift and go to state 3
    VOID            shift and go to state 8
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 10
    BOOLEAN         shift and go to state 11

    program                        shift and go to state 1
    declist                        shift and go to state 2
    dec                            shift and go to state 4
    vardec                         shift and go to state 5
    funcdec                        shift and go to state 6
    type                           shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> declist . MAIN LRB RRB block
    (4) declist -> declist . dec
    (5) dec -> . vardec
    (6) dec -> . funcdec
    (15) vardec -> . type idlist SEMICOLON
    (16) funcdec -> . type ID LRB paramdecs RRB block
    (17) funcdec -> . type ID LRB RRB block
    (18) funcdec -> . VOID ID LRB paramdecs RRB block
    (19) funcdec -> . VOID ID LRB RRB block
    (7) type -> . INTEGER
    (8) type -> . FLOAT
    (9) type -> . BOOLEAN

    MAIN            shift and go to state 12
    VOID            shift and go to state 8
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 10
    BOOLEAN         shift and go to state 11

    dec                            shift and go to state 13
    vardec                         shift and go to state 5
    funcdec                        shift and go to state 6
    type                           shift and go to state 7

state 3

    (2) program -> MAIN . LRB RRB block

    LRB             shift and go to state 14


state 4

    (3) declist -> dec .

    MAIN            reduce using rule 3 (declist -> dec .)
    VOID            reduce using rule 3 (declist -> dec .)
    INTEGER         reduce using rule 3 (declist -> dec .)
    FLOAT           reduce using rule 3 (declist -> dec .)
    BOOLEAN         reduce using rule 3 (declist -> dec .)


state 5

    (5) dec -> vardec .

    MAIN            reduce using rule 5 (dec -> vardec .)
    VOID            reduce using rule 5 (dec -> vardec .)
    INTEGER         reduce using rule 5 (dec -> vardec .)
    FLOAT           reduce using rule 5 (dec -> vardec .)
    BOOLEAN         reduce using rule 5 (dec -> vardec .)


state 6

    (6) dec -> funcdec .

    MAIN            reduce using rule 6 (dec -> funcdec .)
    VOID            reduce using rule 6 (dec -> funcdec .)
    INTEGER         reduce using rule 6 (dec -> funcdec .)
    FLOAT           reduce using rule 6 (dec -> funcdec .)
    BOOLEAN         reduce using rule 6 (dec -> funcdec .)


state 7

    (15) vardec -> type . idlist SEMICOLON
    (16) funcdec -> type . ID LRB paramdecs RRB block
    (17) funcdec -> type . ID LRB RRB block
    (13) idlist -> . iddec
    (14) idlist -> . idlist COMMA iddec
    (10) iddec -> . ID
    (11) iddec -> . ID LSB exp RSB
    (12) iddec -> . ID ASSIGN exp

    ID              shift and go to state 16

    idlist                         shift and go to state 15
    iddec                          shift and go to state 17

state 8

    (18) funcdec -> VOID . ID LRB paramdecs RRB block
    (19) funcdec -> VOID . ID LRB RRB block

    ID              shift and go to state 18


state 9

    (7) type -> INTEGER .

    ID              reduce using rule 7 (type -> INTEGER .)


state 10

    (8) type -> FLOAT .

    ID              reduce using rule 8 (type -> FLOAT .)


state 11

    (9) type -> BOOLEAN .

    ID              reduce using rule 9 (type -> BOOLEAN .)


state 12

    (1) program -> declist MAIN . LRB RRB block

    LRB             shift and go to state 19


state 13

    (4) declist -> declist dec .

    MAIN            reduce using rule 4 (declist -> declist dec .)
    VOID            reduce using rule 4 (declist -> declist dec .)
    INTEGER         reduce using rule 4 (declist -> declist dec .)
    FLOAT           reduce using rule 4 (declist -> declist dec .)
    BOOLEAN         reduce using rule 4 (declist -> declist dec .)


state 14

    (2) program -> MAIN LRB . RRB block

    RRB             shift and go to state 20


state 15

    (15) vardec -> type idlist . SEMICOLON
    (14) idlist -> idlist . COMMA iddec

    SEMICOLON       shift and go to state 21
    COMMA           shift and go to state 22


state 16

    (16) funcdec -> type ID . LRB paramdecs RRB block
    (17) funcdec -> type ID . LRB RRB block
    (10) iddec -> ID .
    (11) iddec -> ID . LSB exp RSB
    (12) iddec -> ID . ASSIGN exp

    LRB             shift and go to state 23
    SEMICOLON       reduce using rule 10 (iddec -> ID .)
    COMMA           reduce using rule 10 (iddec -> ID .)
    LSB             shift and go to state 24
    ASSIGN          shift and go to state 25


state 17

    (13) idlist -> iddec .

    SEMICOLON       reduce using rule 13 (idlist -> iddec .)
    COMMA           reduce using rule 13 (idlist -> iddec .)


state 18

    (18) funcdec -> VOID ID . LRB paramdecs RRB block
    (19) funcdec -> VOID ID . LRB RRB block

    LRB             shift and go to state 26


state 19

    (1) program -> declist MAIN LRB . RRB block

    RRB             shift and go to state 27


state 20

    (2) program -> MAIN LRB RRB . block
    (27) block -> . LCB varlist stmtlist RCB
    (28) block -> . LCB varlist RCB
    (29) block -> . LCB stmtlist RCB
    (30) block -> . LCB RCB

    LCB             shift and go to state 29

    block                          shift and go to state 28

state 21

    (15) vardec -> type idlist SEMICOLON .

    MAIN            reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    VOID            reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    INTEGER         reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    FLOAT           reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    BOOLEAN         reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    RCB             reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    RETURN          reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    WHILE           reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    FOR             reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    IF              reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    PRINT           reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    ID              reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    LRB             reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    SUB             reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    NOT             reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    LCB             reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    INTEGERNUMBER   reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    FLOATNUMBER     reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    TRUE            reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    FALSE           reduce using rule 15 (vardec -> type idlist SEMICOLON .)


state 22

    (14) idlist -> idlist COMMA . iddec
    (10) iddec -> . ID
    (11) iddec -> . ID LSB exp RSB
    (12) iddec -> . ID ASSIGN exp

    ID              shift and go to state 31

    iddec                          shift and go to state 30

state 23

    (16) funcdec -> type ID LRB . paramdecs RRB block
    (17) funcdec -> type ID LRB . RRB block
    (20) paramdecs -> . paramdecslist
    (21) paramdecslist -> . paramdec
    (22) paramdecslist -> . paramdecslist COMMA paramdec
    (23) paramdec -> . type ID
    (24) paramdec -> . type ID LSB RSB
    (7) type -> . INTEGER
    (8) type -> . FLOAT
    (9) type -> . BOOLEAN

    RRB             shift and go to state 34
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 10
    BOOLEAN         shift and go to state 11

    type                           shift and go to state 32
    paramdecs                      shift and go to state 33
    paramdecslist                  shift and go to state 35
    paramdec                       shift and go to state 36

state 24

    (11) iddec -> ID LSB . exp RSB
    (47) exp -> . lvalue ASSIGN exp
    (48) exp -> . exp SUM exp
    (49) exp -> . exp SUB exp
    (50) exp -> . exp MUL exp
    (51) exp -> . exp DIV exp
    (52) exp -> . exp MOD exp
    (53) exp -> . exp OR exp
    (54) exp -> . exp AND exp
    (55) exp -> . const
    (56) exp -> . lvalue
    (57) exp -> . ID LRB explist RRB
    (58) exp -> . LRB exp RRB
    (59) exp -> . ID LRB RRB
    (60) exp -> . SUB exp
    (61) exp -> . NOT exp
    (66) exp -> . exp GT exp
    (67) exp -> . exp LT exp
    (68) exp -> . exp NE exp
    (69) exp -> . exp EQ exp
    (70) exp -> . exp LE exp
    (71) exp -> . exp GE exp
    (33) lvalue -> . ID
    (34) lvalue -> . ID LSB exp RSB
    (62) const -> . INTEGERNUMBER
    (63) const -> . FLOATNUMBER
    (64) const -> . TRUE
    (65) const -> . FALSE

    ID              shift and go to state 37
    LRB             shift and go to state 42
    SUB             shift and go to state 40
    NOT             shift and go to state 43
    INTEGERNUMBER   shift and go to state 44
    FLOATNUMBER     shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47

    exp                            shift and go to state 38
    lvalue                         shift and go to state 39
    const                          shift and go to state 41

state 25

    (12) iddec -> ID ASSIGN . exp
    (47) exp -> . lvalue ASSIGN exp
    (48) exp -> . exp SUM exp
    (49) exp -> . exp SUB exp
    (50) exp -> . exp MUL exp
    (51) exp -> . exp DIV exp
    (52) exp -> . exp MOD exp
    (53) exp -> . exp OR exp
    (54) exp -> . exp AND exp
    (55) exp -> . const
    (56) exp -> . lvalue
    (57) exp -> . ID LRB explist RRB
    (58) exp -> . LRB exp RRB
    (59) exp -> . ID LRB RRB
    (60) exp -> . SUB exp
    (61) exp -> . NOT exp
    (66) exp -> . exp GT exp
    (67) exp -> . exp LT exp
    (68) exp -> . exp NE exp
    (69) exp -> . exp EQ exp
    (70) exp -> . exp LE exp
    (71) exp -> . exp GE exp
    (33) lvalue -> . ID
    (34) lvalue -> . ID LSB exp RSB
    (62) const -> . INTEGERNUMBER
    (63) const -> . FLOATNUMBER
    (64) const -> . TRUE
    (65) const -> . FALSE

    ID              shift and go to state 37
    LRB             shift and go to state 42
    SUB             shift and go to state 40
    NOT             shift and go to state 43
    INTEGERNUMBER   shift and go to state 44
    FLOATNUMBER     shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47

    exp                            shift and go to state 48
    lvalue                         shift and go to state 39
    const                          shift and go to state 41

state 26

    (18) funcdec -> VOID ID LRB . paramdecs RRB block
    (19) funcdec -> VOID ID LRB . RRB block
    (20) paramdecs -> . paramdecslist
    (21) paramdecslist -> . paramdec
    (22) paramdecslist -> . paramdecslist COMMA paramdec
    (23) paramdec -> . type ID
    (24) paramdec -> . type ID LSB RSB
    (7) type -> . INTEGER
    (8) type -> . FLOAT
    (9) type -> . BOOLEAN

    RRB             shift and go to state 50
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 10
    BOOLEAN         shift and go to state 11

    paramdecs                      shift and go to state 49
    paramdecslist                  shift and go to state 35
    paramdec                       shift and go to state 36
    type                           shift and go to state 32

state 27

    (1) program -> declist MAIN LRB RRB . block
    (27) block -> . LCB varlist stmtlist RCB
    (28) block -> . LCB varlist RCB
    (29) block -> . LCB stmtlist RCB
    (30) block -> . LCB RCB

    LCB             shift and go to state 29

    block                          shift and go to state 51

state 28

    (2) program -> MAIN LRB RRB block .

    $end            reduce using rule 2 (program -> MAIN LRB RRB block .)


state 29

    (27) block -> LCB . varlist stmtlist RCB
    (28) block -> LCB . varlist RCB
    (29) block -> LCB . stmtlist RCB
    (30) block -> LCB . RCB
    (25) varlist -> . vardec
    (26) varlist -> . varlist vardec
    (31) stmtlist -> . stmt
    (32) stmtlist -> . stmtlist stmt
    (15) vardec -> . type idlist SEMICOLON
    (35) stmt -> . RETURN exp SEMICOLON
    (36) stmt -> . exp SEMICOLON
    (37) stmt -> . block
    (38) stmt -> . WHILE LRB exp RRB stmt
    (39) stmt -> . FOR LRB exp SEMICOLON exp SEMICOLON exp RRB stmt
    (40) stmt -> . IF LRB exp RRB stmt elseiflist
    (41) stmt -> . IF LRB exp RRB stmt
    (42) stmt -> . IF LRB exp RRB stmt elseiflist ELSE stmt
    (43) stmt -> . IF LRB exp RRB stmt ELSE stmt
    (44) stmt -> . PRINT LRB ID RRB SEMICOLON
    (7) type -> . INTEGER
    (8) type -> . FLOAT
    (9) type -> . BOOLEAN
    (47) exp -> . lvalue ASSIGN exp
    (48) exp -> . exp SUM exp
    (49) exp -> . exp SUB exp
    (50) exp -> . exp MUL exp
    (51) exp -> . exp DIV exp
    (52) exp -> . exp MOD exp
    (53) exp -> . exp OR exp
    (54) exp -> . exp AND exp
    (55) exp -> . const
    (56) exp -> . lvalue
    (57) exp -> . ID LRB explist RRB
    (58) exp -> . LRB exp RRB
    (59) exp -> . ID LRB RRB
    (60) exp -> . SUB exp
    (61) exp -> . NOT exp
    (66) exp -> . exp GT exp
    (67) exp -> . exp LT exp
    (68) exp -> . exp NE exp
    (69) exp -> . exp EQ exp
    (70) exp -> . exp LE exp
    (71) exp -> . exp GE exp
    (27) block -> . LCB varlist stmtlist RCB
    (28) block -> . LCB varlist RCB
    (29) block -> . LCB stmtlist RCB
    (30) block -> . LCB RCB
    (33) lvalue -> . ID
    (34) lvalue -> . ID LSB exp RSB
    (62) const -> . INTEGERNUMBER
    (63) const -> . FLOATNUMBER
    (64) const -> . TRUE
    (65) const -> . FALSE

    RCB             shift and go to state 54
    RETURN          shift and go to state 58
    WHILE           shift and go to state 61
    FOR             shift and go to state 62
    IF              shift and go to state 63
    PRINT           shift and go to state 64
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 10
    BOOLEAN         shift and go to state 11
    ID              shift and go to state 37
    LRB             shift and go to state 42
    SUB             shift and go to state 40
    NOT             shift and go to state 43
    LCB             shift and go to state 29
    INTEGERNUMBER   shift and go to state 44
    FLOATNUMBER     shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47

    varlist                        shift and go to state 52
    stmtlist                       shift and go to state 53
    vardec                         shift and go to state 55
    stmt                           shift and go to state 56
    type                           shift and go to state 57
    exp                            shift and go to state 59
    block                          shift and go to state 60
    lvalue                         shift and go to state 39
    const                          shift and go to state 41

state 30

    (14) idlist -> idlist COMMA iddec .

    SEMICOLON       reduce using rule 14 (idlist -> idlist COMMA iddec .)
    COMMA           reduce using rule 14 (idlist -> idlist COMMA iddec .)


state 31

    (10) iddec -> ID .
    (11) iddec -> ID . LSB exp RSB
    (12) iddec -> ID . ASSIGN exp

    SEMICOLON       reduce using rule 10 (iddec -> ID .)
    COMMA           reduce using rule 10 (iddec -> ID .)
    LSB             shift and go to state 24
    ASSIGN          shift and go to state 25


state 32

    (23) paramdec -> type . ID
    (24) paramdec -> type . ID LSB RSB

    ID              shift and go to state 65


state 33

    (16) funcdec -> type ID LRB paramdecs . RRB block

    RRB             shift and go to state 66


state 34

    (17) funcdec -> type ID LRB RRB . block
    (27) block -> . LCB varlist stmtlist RCB
    (28) block -> . LCB varlist RCB
    (29) block -> . LCB stmtlist RCB
    (30) block -> . LCB RCB

    LCB             shift and go to state 29

    block                          shift and go to state 67

state 35

    (20) paramdecs -> paramdecslist .
    (22) paramdecslist -> paramdecslist . COMMA paramdec

    RRB             reduce using rule 20 (paramdecs -> paramdecslist .)
    COMMA           shift and go to state 68


state 36

    (21) paramdecslist -> paramdec .

    COMMA           reduce using rule 21 (paramdecslist -> paramdec .)
    RRB             reduce using rule 21 (paramdecslist -> paramdec .)


state 37

    (57) exp -> ID . LRB explist RRB
    (59) exp -> ID . LRB RRB
    (33) lvalue -> ID .
    (34) lvalue -> ID . LSB exp RSB

    LRB             shift and go to state 69
    ASSIGN          reduce using rule 33 (lvalue -> ID .)
    RSB             reduce using rule 33 (lvalue -> ID .)
    SUM             reduce using rule 33 (lvalue -> ID .)
    SUB             reduce using rule 33 (lvalue -> ID .)
    MUL             reduce using rule 33 (lvalue -> ID .)
    DIV             reduce using rule 33 (lvalue -> ID .)
    MOD             reduce using rule 33 (lvalue -> ID .)
    OR              reduce using rule 33 (lvalue -> ID .)
    AND             reduce using rule 33 (lvalue -> ID .)
    GT              reduce using rule 33 (lvalue -> ID .)
    LT              reduce using rule 33 (lvalue -> ID .)
    NE              reduce using rule 33 (lvalue -> ID .)
    EQ              reduce using rule 33 (lvalue -> ID .)
    LE              reduce using rule 33 (lvalue -> ID .)
    GE              reduce using rule 33 (lvalue -> ID .)
    SEMICOLON       reduce using rule 33 (lvalue -> ID .)
    COMMA           reduce using rule 33 (lvalue -> ID .)
    RRB             reduce using rule 33 (lvalue -> ID .)
    LSB             shift and go to state 70


state 38
